Sub-topics and behavioral questions

--- a/index.html
+++ b/index.html
@@ -436,6 +436,22 @@
                     onclick="switchTab('spfxlwc')">
                     SPFx vs LWC
                 </button>
+                <button
+                    class="tab-button"
+                    role="tab"
+                    aria-selected="false"
+                    id="final-questions-tab"
+                    onclick="window.location.href='final-questions.html'">
+                    Final Questions
+                </button>
+                <button
+                    class="tab-button"
+                    role="tab"
+                    aria-selected="false"
+                    id="behavioral-tab"
+                    onclick="window.location.href='behavioral-questions.html'">
+                    Behavioral Questions
+                </button>
             </div>
 
             <div id="basics-panel" class="tab-content active" role="tabpanel" aria-labelledby="basics-tab">
