--- a/final-questions.html
+++ b/final-questions.html
@@ -206,15 +206,14 @@
                     </p>
                 </a>
 
-                <!-- Topic 3: Angular & Web Development (Placeholder) -->
-                <div class="topic-card placeholder">
+                <!-- Topic 3: Angular & Web Development (Active) -->
+                <a href="angular-web-dev-qa.html" class="topic-card active">
                     <div class="topic-number">3</div>
                     <h2 class="topic-title">Angular & Web Development</h2>
                     <p class="topic-description">
-                        Modern web development with Angular, TypeScript, Bootstrap, and responsive design patterns.
+                        Transitioning from React to Angular, leveraging TypeScript expertise, and modern web development patterns.
                     </p>
-                    <span class="coming-soon">Coming Soon</span>
-                </div>
+                </a>
 
                 <!-- Topic 4: Accessibility & Compliance (Active) -->
                 <a href="accessibility-qa.html" class="topic-card active">
@@ -231,6 +230,24 @@
                     <h2 class="topic-title">Content Management & Digital Forms</h2>
                     <p class="topic-description">
                         Conditional logic forms, content governance, approval workflows, metadata management, and digital transformation.
+                    </p>
+                </a>
+
+                <!-- Topic 6: Platform Migration Experience (Active) -->
+                <a href="platform-migration-qa.html" class="topic-card active">
+                    <div class="topic-number">6</div>
+                    <h2 class="topic-title">Platform Migration Experience</h2>
+                    <p class="topic-description">
+                        ZohoOne to Salesforce to SharePoint: demonstrating process analysis, workflow optimization, and cross-platform expertise with measurable results.
+                    </p>
+                </a>
+
+                <!-- Topic 7: HESAA Reviews & Solutions (Active) -->
+                <a href="hesaa-reviews-qa.html" class="topic-card active">
+                    <div class="topic-number">7</div>
+                    <h2 class="topic-title">HESAA Online Reviews & How I Can Help</h2>
+                    <p class="topic-description">
+                        Understanding HESAA's current challenges from online reviews and providing practical solutions based on my experience addressing similar pain points.
                     </p>
                 </a>
             </div>
