--- a/index.html
+++ b/index.html
@@ -452,6 +452,14 @@
                     onclick="window.location.href='behavioral-questions.html'">
                     Behavioral Questions
                 </button>
+                <button
+                    class="tab-button"
+                    role="tab"
+                    aria-selected="false"
+                    id="ms-sql-tab"
+                    onclick="window.location.href='ms-sql-qa.html'">
+                    MS SQL
+                </button>
             </div>
 
             <div id="basics-panel" class="tab-content active" role="tabpanel" aria-labelledby="basics-tab">
