--- a/index.html
+++ b/index.html
@@ -351,6 +351,26 @@
                 </svg>
                 Official SharePoint Documentation
             </a>
+            <a href="../Job Description.pdf"
+               target="_blank"
+               rel="noopener noreferrer"
+               class="docs-link"
+               aria-label="View Job Description PDF">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M10,19L12,15H9V10H15V15L13,19H10Z"/>
+                </svg>
+                Job Description
+            </a>
+            <a href="../Dayan Dias Resume 2025.pdf"
+               target="_blank"
+               rel="noopener noreferrer"
+               class="docs-link"
+               aria-label="View Dayan Dias Resume PDF">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M10,19L12,15H9V10H15V15L13,19H10Z"/>
+                </svg>
+                Dayan Dias Resume
+            </a>
         </header>
 
         <main>
