--- a/index.html
+++ b/index.html
@@ -227,37 +227,81 @@
             align-items: center;
             gap: 8px;
             margin-top: 15px;
+            margin-right: 10px;
             padding: 10px 20px;
-            background-color: #0078d4;
+            background-color: #2c3e50;
             color: white;
             text-decoration: none;
             border-radius: 4px;
             font-size: 0.95rem;
             font-weight: 500;
             transition: all 0.3s ease;
-            box-shadow: 0 2px 4px rgba(0, 120, 212, 0.2);
+            box-shadow: 0 2px 4px rgba(44, 62, 80, 0.3);
             -webkit-tap-highlight-color: transparent;
             touch-action: manipulation;
             cursor: pointer;
         }
 
         .docs-link:hover {
-            background-color: #106ebe;
-            box-shadow: 0 4px 8px rgba(0, 120, 212, 0.3);
+            background-color: #34495e;
+            box-shadow: 0 4px 8px rgba(44, 62, 80, 0.4);
             transform: translateY(-1px);
         }
 
         .docs-link:active {
-            background-color: #005a9e;
+            background-color: #1a252f;
             transform: translateY(0);
         }
 
         .docs-link:focus {
-            outline: 2px solid #0078d4;
+            outline: 2px solid #2c3e50;
             outline-offset: 2px;
         }
 
         .docs-link svg {
+            width: 16px;
+            height: 16px;
+            fill: currentColor;
+            pointer-events: none;
+        }
+
+        .pdf-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            margin-top: 15px;
+            margin-right: 10px;
+            padding: 10px 20px;
+            background-color: #2c3e50;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 0.95rem;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 4px rgba(44, 62, 80, 0.3);
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
+            cursor: pointer;
+        }
+
+        .pdf-link:hover {
+            background-color: #34495e;
+            box-shadow: 0 4px 8px rgba(44, 62, 80, 0.4);
+            transform: translateY(-1px);
+        }
+
+        .pdf-link:active {
+            background-color: #1a252f;
+            transform: translateY(0);
+        }
+
+        .pdf-link:focus {
+            outline: 2px solid #2c3e50;
+            outline-offset: 2px;
+        }
+
+        .pdf-link svg {
             width: 16px;
             height: 16px;
             fill: currentColor;
@@ -354,7 +398,7 @@
             <a href="../Job Description.pdf"
                target="_blank"
                rel="noopener noreferrer"
-               class="docs-link"
+               class="pdf-link"
                aria-label="View Job Description PDF">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M10,19L12,15H9V10H15V15L13,19H10Z"/>
@@ -364,7 +408,7 @@
             <a href="../Dayan Dias Resume 2025.pdf"
                target="_blank"
                rel="noopener noreferrer"
-               class="docs-link"
+               class="pdf-link"
                aria-label="View Dayan Dias Resume PDF">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M10,19L12,15H9V10H15V15L13,19H10Z"/>
