--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 </svg>
                 Official SharePoint Documentation
             </a>
-            <a href="../Job Description.pdf"
+            <a href="Job Description.pdf"
                target="_blank"
                rel="noopener noreferrer"
                class="pdf-link"
@@ -405,7 +405,7 @@
                 </svg>
                 Job Description
             </a>
-            <a href="../Dayan Dias Resume 2025.pdf"
+            <a href="Dayan Dias Resume 2025.pdf"
                target="_blank"
                rel="noopener noreferrer"
                class="pdf-link"
