Resume buttons created

--- a/index.html
+++ b/index.html
@@ -405,15 +405,15 @@
                 </svg>
                 Job Description
             </a>
-            <a href="Dayan Dias Resume 2025.pdf"
+            <a href="Dayan Dias Resume CRM.pdf"
                target="_blank"
                rel="noopener noreferrer"
                class="pdf-link"
-               aria-label="View Dayan Dias Resume PDF">
+               aria-label="View Dayan Dias Resume CRM PDF">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M10,19L12,15H9V10H15V15L13,19H10Z"/>
                 </svg>
-                Dayan Dias Resume
+                Resume - CRM
             </a>
         </header>
 
@@ -4633,6 +4633,37 @@ Does Power Automate have a connector for your app?
         </script>
 
         <footer>
+            <div style="margin-bottom: 30px;">
+                <p style="font-size: 1.1rem; font-weight: 600; margin-bottom: 15px;">Useful Links</p>
+                <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
+                    <a href="https://paicsolar.com/"
+                       target="_blank"
+                       rel="noopener noreferrer"
+                       style="color: #2c3e50; text-decoration: none; font-weight: 500; transition: color 0.3s ease;"
+                       onmouseover="this.style.color='#0078d4'"
+                       onmouseout="this.style.color='#2c3e50'">
+                        PAIC Website
+                    </a>
+                    <span style="color: #ccc;">|</span>
+                    <a href="https://www.undp.org/thailand/projects/undp-accelerator-lab-thailand"
+                       target="_blank"
+                       rel="noopener noreferrer"
+                       style="color: #2c3e50; text-decoration: none; font-weight: 500; transition: color 0.3s ease;"
+                       onmouseover="this.style.color='#0078d4'"
+                       onmouseout="this.style.color='#2c3e50'">
+                        UNDP Solutions Lab (Thailand)
+                    </a>
+                    <span style="color: #ccc;">|</span>
+                    <a href="Dayan Dias Resume CRM and Software.pdf"
+                       target="_blank"
+                       rel="noopener noreferrer"
+                       style="color: #2c3e50; text-decoration: none; font-weight: 500; transition: color 0.3s ease;"
+                       onmouseover="this.style.color='#0078d4'"
+                       onmouseout="this.style.color='#2c3e50'">
+                        Resume - CRM & Software
+                    </a>
+                </div>
+            </div>
             <p><strong>HESAA Web Developer Interview Preparation</strong></p>
             <p>SharePoint Administration &amp; Development | Power Automate | Workflow Automation</p>
             <p style="margin-top: 10px; font-size: 0.85rem;">Generated: December 2025</p>
